# function-calling-cli

./: README.md  evaluate_fc.py  pyproject.toml  qwen3.5-9b-fc.modelfile
.tmp/: neo_exec_9436ec1f.sh
results/: evaluation_report_20260313_091247.json  evaluation_report_20260313_091247.txt  evaluation_report_20260313_091332.json  evaluation_report_20260313_091332.txt  evaluation_report_20260313_091517.json  evaluation_report_20260313_091517.txt  evaluation_report_20260313_094126.json  evaluation_report_20260313_094126.txt  evaluation_report_20260313_095555.json  evaluation_report_20260313_095555.txt  evaluation_report_20260313_095817.json  evaluation_report_20260313_095817.txt  evaluation_report_20260313_100506.json  evaluation_report_20260313_100506.txt  evaluation_report_20260313_101333.json  evaluation_report_20260313_101333.txt  evaluation_report_20260313_102858.json  evaluation_report_20260313_102858.txt  evaluation_report_20260313_103248.json  evaluation_report_20260313_103248.txt  evaluation_report_20260313_122651.json  evaluation_report_20260313_122651.txt  evaluation_report_20260313_191121.json  evaluation_report_20260313_191121.txt  evaluation_report_20260313_192008.json  evaluation_report_20260313_192008.txt  evaluation_report_20260313_194317.json  evaluation_report_20260313_194317.txt  evaluation_report_20260313_195829.json  evaluation_report_20260313_195829.txt
src/fc_eval/: __init__.py  __main__.py  cli.py  client.py  evaluator.py  reporter.py  test_suite.py  validator.py
